// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`docs/guide/metadata/restrict-attributes.md inline validation: boolean 1`] = `
[
  {
    "errorCount": 2,
    "filePath": "inline",
    "messages": [
      {
        "column": 15,
        "line": 2,
        "message": "Attribute "quacks" should omit value",
        "offset": 54,
        "ruleId": "attribute-boolean-style",
        "ruleUrl": "https://html-validate.org/rules/attribute-boolean-style.html",
        "selector": "my-component:nth-child(2)",
        "severity": 2,
        "size": 6,
      },
      {
        "column": 23,
        "context": {
          "allowed": {
            "boolean": true,
          },
          "attribute": "quacks",
          "element": "my-component",
          "value": "duck",
        },
        "line": 2,
        "message": "Attribute "quacks" has invalid value "duck"",
        "offset": 62,
        "ruleId": "attribute-allowed-values",
        "ruleUrl": "https://html-validate.org/rules/attribute-allowed-values.html",
        "selector": "my-component:nth-child(2)",
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<my-component quacks>...</my-component>
<my-component quacks="duck">...</my-component>",
    "warningCount": 0,
  },
]
`;

exports[`docs/guide/metadata/restrict-attributes.md inline validation: deprecated 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 15,
        "line": 1,
        "message": "Attribute "duck" is deprecated on <my-component> element",
        "offset": 14,
        "ruleId": "no-deprecated-attr",
        "ruleUrl": "https://html-validate.org/rules/no-deprecated-attr.html",
        "selector": "my-component:nth-child(1)",
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<my-component duck="dewey">...</my-component>
<my-component>...</my-component>",
    "warningCount": 0,
  },
]
`;

exports[`docs/guide/metadata/restrict-attributes.md inline validation: enum 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 21,
        "context": {
          "allowed": {
            "enum": [
              "huey",
              "dewey",
              "louie",
            ],
          },
          "attribute": "duck",
          "element": "my-component",
          "value": "flintheart",
        },
        "line": 2,
        "message": "Attribute "duck" has invalid value "flintheart"",
        "offset": 66,
        "ruleId": "attribute-allowed-values",
        "ruleUrl": "https://html-validate.org/rules/attribute-allowed-values.html",
        "selector": "my-component:nth-child(2)",
        "severity": 2,
        "size": 10,
      },
    ],
    "source": "<my-component duck="dewey">...</my-component>
<my-component duck="flintheart">...</my-component>",
    "warningCount": 0,
  },
]
`;

exports[`docs/guide/metadata/restrict-attributes.md inline validation: omit 1`] = `[]`;

exports[`docs/guide/metadata/restrict-attributes.md inline validation: regexp 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 22,
        "context": {
          "allowed": {
            "enum": [
              /\\^\\\\d\\+\\$/,
            ],
          },
          "attribute": "ducks",
          "element": "my-component",
          "value": "huey",
        },
        "line": 2,
        "message": "Attribute "ducks" has invalid value "huey"",
        "offset": 64,
        "ruleId": "attribute-allowed-values",
        "ruleUrl": "https://html-validate.org/rules/attribute-allowed-values.html",
        "selector": "my-component:nth-child(2)",
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<my-component ducks="3">...</my-component>
<my-component ducks="huey">...</my-component>",
    "warningCount": 0,
  },
]
`;

exports[`docs/guide/metadata/restrict-attributes.md inline validation: required 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 2,
        "context": {
          "attr": "duck",
          "tagName": "<my-component>",
        },
        "line": 2,
        "message": "<my-component> is missing required "duck" attribute",
        "offset": 47,
        "ruleId": "element-required-attributes",
        "ruleUrl": "https://html-validate.org/rules/element-required-attributes.html",
        "selector": "my-component:nth-child(2)",
        "severity": 2,
        "size": 12,
      },
    ],
    "source": "<my-component duck="dewey">...</my-component>
<my-component>...</my-component>",
    "warningCount": 0,
  },
]
`;
